--- a/example/marijan-notebook.ipynb
+++ b/example/marijan-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
    "source": [
     "class Data:\n",
     "    def __init__(self):\n",
-    "        self.index = np.linspace(0, 10, 11)\n",
+    "        self.index = np.linspace(0, 1, 11)\n",
     "\n",
     "    def signal(self, index):     \n",
     "        t = np.linspace(0, 10, 101)\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -50,9 +50,9 @@
     "class DataAnalysis:\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
-    "        self.slider = ipywidgets.IntSlider(value=self.data.index[0],\n",
-    "                                           min=self.data.index[0], \n",
-    "                                           max=self.data.index[-1])\n",
+    "        self.slider = ipywidgets.FloatSlider(value=self.data.index[0],\n",
+    "                                             min=self.data.index[0], \n",
+    "                                             max=self.data.index[-1])\n",
     "        self.slider.observe(self.update_output)\n",
     "        self.out = widgets.Output()\n",
     "        \n",
@@ -61,16 +61,16 @@
     "        display(self.out)\n",
     "        \n",
     "    def update_output(self, value):\n",
-    "        #self.out.clear_output()\n",
+    "        self.out.clear_output(wait=True)\n",
+    "        plt.close()\n",
+    "        plt.imshow(self.data.signal2D(self.slider.value))\n",
     "        with self.out:\n",
-    "            plt.cla()\n",
-    "            plt.plot(self.data.signal(self.slider.value))\n",
     "            display(plt.gcf())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -111,161 +111,63 @@
   },
   "widgets": {
    "state": {
-    "02698ae759cc460b92d7798b29db52fe": {
+    "01cd38b7b59645ce8b45c7dc5b07390a": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "0696d82076224c96a533c135cff0c9f1": {
+    "3b45af01666a4ffa865e0d3526406c15": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "0d04cc693eed4d5d9dfed20bd9fe0e40": {
+    "428e7c12270542c4b80474bd858f6282": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "1f84f58db2aa467c94771d0ae0acd145": {
+    "4e8c901247c74da388b59c5922c6020a": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "26fe2a48d9d54bf8a616b4b48460ba57": {
+    "95483fb8be1a40d88e4767c93390de3e": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "30335276ecec497cba692789ec397196": {
+    "a77693d1ad5d4c9ca9a888a3e5dbb206": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "3a6af9d2a41d46d2bd8c5919fcea526a": {
+    "b95da7d6bec1475cadf38d61dd9cde13": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "53f56b3e4ded4a3e98047f6ec289fe58": {
+    "c3e71255cbca43a5abaa521f8bebddd6": {
      "views": [
       {
        "cell_index": 3
       }
      ]
     },
-    "721780cb60b44e88b0ebd0afc701e41f": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "7721b8efecfe446f8c2b68cbe7bc1958": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "797f491c1c284f7ea9a0a47869d9e769": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "8369f86521344e2fa85731708a88231e": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "838279eb81d04d5cb501047cbcdac852": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "9e29d5ddfe3e4dbca615e05a19e7f6d4": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "a9aeb41219d54cd1b2c53088208277ad": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "b32abfbaf01240f88da0a2602b971c0a": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "b3c4352655124b81becaf666a0b9f387": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "b3cfacab13b842629e740d8d28876a95": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "b6610aae29fb47bc9962e5125c529969": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "b9723071b0aa45ff8b325b74cd53d8f5": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "c8f20ac18f404f519b390b7acfd54a9c": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "d4921e3acf184d72a4013a0aa20167e2": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "e8bcb6d251ad425eaa306da5698f4657": {
+    "d4b37cc32af74a29aecc8df68a9eeacd": {
      "views": [
       {
        "cell_index": 3
