--- a/example/marijan-notebook.ipynb
+++ b/example/marijan-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -139,10 +139,10 @@
     "        self.update_plot(None)\n",
     "        \n",
     "    def _ipython_display_(self):\n",
-    "        box1 = ipywidgets.VBox([self.slider, self.out])\n",
+    "        box0 = ipywidgets.HBox([self.slider, self.play])\n",
+    "        box1 = ipywidgets.VBox([box0, self.out])\n",
     "        box2 = ipywidgets.HBox([self.select, box1])\n",
     "        display(box2)\n",
-    "        display(self.play)\n",
     "            \n",
     "    def update_plot(self, value):\n",
     "        self.out.clear_output(wait=True)\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -169,6 +169,15 @@
    "source": [
     "DataAnalysisOMF(name=\"stdprob4\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
